# essm

./: .gitignore  CHANGES.rst  CONTRIBUTING.md  pyproject.toml
.github/actions/setup-env/: action.yaml  action.yml
.github/workflows/: ci.yml  tests.yml
docs/: conf.py
src/essm/: _generator.py
