#
# This file is part of essm.
# Copyright (C) 2017-2019 ETH Zurich, Swiss Data Science Center.
#
# essm is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# essm is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with essm; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
# MA 02111-1307, USA.
[project]
name = "essm"
version = "1.1.1.dev0"
description = "This package contains helpers to deal with physical variables and units."
readme = "README.rst"
authors = [
    { name = "Jiri Kuncar", email = "jiri.kuncar@gmail.com" },
    { name = "Stan Schymanski", email = "stan.schymanski@env.ethz.ch" }
]
license = "GPL-2.0-or-later"
requires-python = ">=3.8,<3.9"
dependencies = [
    "six==1.10.0",
    "sympy==1.6",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []
docs = [
    "jinja2<3.1",
    "matplotlib>=3.7.5",
    "nbsphinx==0.6.1",
    "sphinx==1.8",
    "sphinxcontrib-bibtex>=0.3.5",
    "toml>=0.10.2",
]
generator = [
    "yapf==0.16.2",
]
tests = [
    "check-manifest>=0.51",
    "coverage>=7.6.1",
    "isort>=5.13.2",
    "pydocstyle>=6.3.0",
    "pytest>=8.3.5",
    "pytest-cache>=1.0",
    "pytest-cov>=5.0.0",
]

[build_sphinx]
# Set warning-is-error = false if you want to force building documentation
warning-is-error = true
source-dir = 'docs/'
build-dir = 'docs/_build'
all_files = 1

[bdist_wheel]
universal = 1

# [tool.pytest]
# addopts = '--pep8 --doctest-glob="*.rst" --doctest-modules --cov=essm --cov-report=term-missing'
# doctest_optionflags = 'ALLOW_UNICODE ALLOW_BYTES DONT_ACCEPT_TRUE_FOR_1 ELLIPSIS IGNORE_EXCEPTION_DETAIL'
# pep8ignore = 'docs/conf.py ALL'
# testpaths = 'docs tests src/essm'

[check-manifest]
ignore = '.gitignore'
